# budgeter

./: .gitignore  CLAUDE.md  Dockerfile  Finance.xlsx  Makefile  README.md  build.json  compose.yml  config.demo.yaml  config.yaml  envars.yml  nginx.conf  run.sh  tasks.py
backend/: manage.py  pyproject.toml
backend/budget/: admin.py  api.py  models.py  tests.py  tests_tabs.py  tests_weekly.py  urls.py  views.py
backend/budget/management/commands/: setup_oauth.py
backend/budget/migrations/: 0001_initial.py  0002_alter_month_month_id.py  0003_budgetitem_owner.py  0004_budgetitemversion_is_one_off_alter_month_month_id.py  0005_alter_budgetitem_item_name_alter_month_month_id.py  0006_budgetitem_bills_pot.py  0007_budgetitem_calculation_type_and_more.py  0008_budgetitem_last_payment_month.py  0009_remove_budgetitem_description_and_more.py  0010_budgetitem_groceries_pot.py  0011_tabitem_tabrepayment.py  0012_budgetitem_is_tab_repayment.py  0013_budgetitem_is_extra.py  0013_budgetitem_is_tab_repayment.py  0014_budgetitem_is_savings.py  0015_savings_as_item_type.py  0016_expense_pot.py  0017_alter_budgetitem_item_type_nurserysettings.py  0018_budgetitem_is_nursery_linked.py
backend/budgeter/: adapters.py  asgi.py  settings.py  urls.py  wsgi.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: BudgetItemRow.jsx  BudgetTable.jsx  ConfirmationModal.jsx  ItemCategoryModal.jsx  LoadingSkeleton.jsx  MonthSelector.jsx  NurseryPage.jsx  OwnerTotals.jsx  SearchComponent.jsx  TabsPage.jsx  (+1 more)
(+12 files in other folders)
